# tollgate

./: .gitignore  .taplo.toml  Anchor.toml  Cargo.toml  README.md  test.sh
idls/: damm_v2.json
lib/damm-v2/: Cargo.toml
lib/damm-v2/src/: lib.rs
programs/tollgate/: Cargo.toml
programs/tollgate/src/: constants.rs  error.rs  events.rs  lib.rs
programs/tollgate/src/accounts_ix/: crank.rs  initialize.rs
programs/tollgate/src/instructions/: crank.rs  initialize.rs  mod.rs
programs/tollgate/src/state/: policy.rs  progress.rs
programs/tollgate/src/utils/: pool.rs  token.rs
tests/: Cargo.toml
tests/src/: constants.rs  lib.rs  test_initialize.rs
tests/src/instructions/: ix_00_setup.rs  ix_01_initialize.rs  ix_02_crank.rs  mod.rs
tests/src/utils/: damm_v2.rs  mod.rs  streamflow.rs  svm.rs
