[workspace]
members = ["lib/damm-v2", "programs/*", "tests"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.dependencies]
anchor-client = "0.31.1"
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
bytemuck = "1.24.0"
const-crypto = "0.3.0"
damm-v2 = { path = "lib/damm-v2" }
ruint = "=1.14.0"
streamflow-sdk = { version = "0.10", features = ["cpi"] }
tollgate = { path = "programs/tollgate" }
