[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-client = { workspace = true }
anchor-spl = { workspace = true }
anyhow = "1.0.71"
base64 = "0.21"
damm-v2 = { workspace = true }
lazy_static = "1.5.0"
litesvm = "0.6.1"
rand = "0.9.2"
ruint = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-clock = "2.2.1"
solana-pubkey = "2.2.1"
streamflow-sdk = { workspace = true }
tollgate = { workspace = true }
